--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-charrid = { git = "https://github.com/Endercass/charrid", branch = "master" }
+charrid = { git = "https://github.com/CharredChat/CharrID", branch = "master" }
+tokio = { version = "1.27.0", features = ["macros", "sync"]}
+warp = "0.3.4"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_json = "1.0.96"
+futures = "0.3.28"
 redis = "0.23.0"
-tokio = "1.27.0"
