--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 charrid = { git = "https://github.com/CharredChat/CharrID", branch = "master" }
-tokio = { version = "1.27.0", features = ["macros", "sync"]}
-warp = "0.3.4"
+tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync"]}
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 futures = "0.3.28"
 redis = "0.23.0"
+futures-util = "0.3.28"
+warp = "0.3.4"
